Implement decision tree after oversampling

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "69ffbb67",
+   "id": "79a89458",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9a605652",
+   "id": "bb93d29e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e603143d",
+   "id": "fd042219",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "75d1392d",
+   "id": "516b1b3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0769f53a",
+   "id": "ac0780ec",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "5d2d5548",
+   "id": "3094ebef",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e95ba5fb",
+   "id": "7a8a6506",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f2c91c10",
+   "id": "1a53c0a3",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b24fb854",
+   "id": "5cda39db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "fe695176",
+   "id": "5b85ac9c",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "7eefbc56",
+   "id": "b6bf9a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "cf33b1f5",
+   "id": "ce3e5e13",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "00f5b232",
+   "id": "251d1b0e",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "86a27ae0",
+   "id": "4731e641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,11 +1114,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "302dece5",
+   "execution_count": 69,
+   "id": "7ba8eb14",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Splitting data\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.2,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "79220053",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Classifier\n",
+      "0.925531914893617\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.92      0.92       922\n",
+      "           1       0.92      0.93      0.93       958\n",
+      "\n",
+      "    accuracy                           0.93      1880\n",
+      "   macro avg       0.93      0.93      0.93      1880\n",
+      "weighted avg       0.93      0.93      0.93      1880\n",
+      "\n",
+      "Confusion Matrix - \n",
+      "[[849  73]\n",
+      " [ 67 891]]\n",
+      "*********************************************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "#DecisionTreeClassifier() - After oversampling\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(x_train, y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "acc = accuracy_score(y_test,y_pred)\n",
+    "print('Decision Tree Classifier')\n",
+    "print(acc)\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print('Confusion Matrix - ')\n",
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "print('*' * 105)"
+   ]
   }
  ],
  "metadata": {
